Fix issue with navbar breaking if body was too long

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,13 +8,13 @@ body {
 }
 
 header {
-  height: 130px;
   z-index: 999;
 
   .nav-top {
     background-color: $KodachromeBoxBG;
     border-bottom: 15px solid $KodachromeBoxBG;
-    height: 100%;
+    //height: 100%;
+    height: 130px;
 
     .headers {
       padding-bottom: 0.5em;
